# SDK-Integra-Contador

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.auth/: .gitkeep
src/: __init__.py  client.py  config.py
src/auth/: __init__.py  manager.py
src/builder/: __init__.py  request_builder.py  response_builder.py
src/exceptions/: __init__.py  errors.py
src/http/: __init__.py  executor.py  middlewares.py  session.py
src/loader/: __init__.py  index.py  template_loader.py
src/responses/: __init__.py  base.py  registry.py
src/responses/autenticaproc/: __init__.py  apoiar.py
src/responses/caixapostal/: __init__.py  consultar.py  monitorar.py
src/templates/: __init__.py  base.py  registry.py
src/templates/autenticaproc/: __init__.py  apoiar.py
src/templates/caixapostal/: __init__.py  consultar.py  monitorar.py
src/templates/ccmei/: __init__.py  consultar.py  emitir.py
src/templates/dctfweb/: __init__.py  consultar.py  emitir.py  transmitir.py
src/templates/defis/: __init__.py  consultar.py  declarar.py
src/templates/dte/: __init__.py  consultar.py
src/templates/eprocesso/: __init__.py  (+1 more)
src/types/: __init__.py  auth.py  common.py
src/utils/: helpers.py  validation.py
tests/: __init__.py  test_auth_persistence.py  test_simple.py
tests/unit/: __init__.py  test_autenticaproc.py  test_auth.py  test_caixapostal.py  test_ccmei.py  test_dctfweb.py  test_defis.py  test_dte.py  test_eprocesso.py  test_eventosatualizacao.py  test_mit.py  test_pagtoweb.py  test_parcmei.py  test_parcmeiesp.py  test_parcsn.py  test_parcsnesp.py  test_pertmei.py  test_pertsn.py  test_pgdasd.py  test_pgmei.py  test_procuracoes.py  test_regimeapuracao.py  test_relpmei.py  test_relpsn.py  test_sicalc.py  test_sitfis.py
(+51 files in other folders)
