[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integra_sdk"
version = "0.1.0"
description = "SDK local para comunicação com a API Integra Contador"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Gabriel Camargo"}
]
keywords = [
    "integra",
    "contador",
    "serpro",
    "api",
    "sdk",
    "brasil",
    "receita-federal",
    "tributario",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "typing-extensions==4.15.0",
    "requests>=2.32.0",
    "requests-pkcs12>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/GabrielHCamargo/SDK-Integra-Contador"
Repository = "https://github.com/GabrielHCamargo/SDK-Integra-Contador"
Issues = "https://github.com/GabrielHCamargo/SDK-Integra-Contador/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["integra_sdk"]

[tool.setuptools.package-dir]
integra_sdk = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"